# Risk-Model-Execution-Platform

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: next-task.md  ship.md
alembic/: env.py
alembic/versions/: a5637507fd54_initial_schema.py
data/seed/: equity_prices.csv  generate_prices.py  portfolio.json  run_var_demo.py
docs/: design-doc.md
docs/plans/: P1a-T1.md  P1a-T2.md  P1a-T3.md  P1a-T4.md  P1a-T5.md  P1b-T1.md  P1b-T2.md  P1b-T3.md  P1b-T4.md
src/api/: main.py  schemas.py
src/db/: __init__.py  config.py  models.py
src/engine/: protocols.py
src/market_data/: service.py
src/models/: historical_var.py
src/registry/: service.py
tests/: conftest.py  test_api_var.py  test_db_models.py  test_historical_var.py  test_market_data.py  test_registry.py
